[gd_scene load_steps=9 format=3 uid="uid://b37hq3ial8kb3"]

[ext_resource type="Script" uid="uid://yq3mue22vfqj" path="res://scenes/levels/objects/vase/vase.gd" id="1_tm1l3"]
[ext_resource type="Texture2D" uid="uid://behoubk1hx20x" path="res://art/Furniture/Vases/PlantSmall2.png" id="2_lqf16"]
[ext_resource type="Texture2D" uid="uid://bwhbyskqwubph" path="res://art/Furniture/Vases/Vase.png" id="3_tqsu8"]
[ext_resource type="Texture2D" uid="uid://be1lio4h00tud" path="res://art/Furniture/Vases/PlantSmall4.png" id="4_kf8sh"]
[ext_resource type="Texture2D" uid="uid://cdl1oeuplc0b7" path="res://art/Furniture/Vases/BrokenFlower1.png" id="5_5wtpt"]
[ext_resource type="Texture2D" uid="uid://3cvqkvclynsd" path="res://art/Furniture/Vases/BrokenFlower2.png" id="6_8o7bg"]
[ext_resource type="Texture2D" uid="uid://clwfswxsabxjp" path="res://art/Furniture/Vases/BrokenFlower3.png" id="7_ubil0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tm1l3"]
radius = 22.0

[node name="VaseBody" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_tm1l3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tm1l3")
one_way_collision_margin = 10.5

[node name="Vase_a_pristine" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_lqf16")

[node name="Vase_b_pristine" type="TextureRect" parent="."]
visible = false
offset_left = -31.0
offset_top = -31.0
offset_right = 33.0
offset_bottom = 33.0
texture = ExtResource("3_tqsu8")

[node name="Vase_c_pristine" type="TextureRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("4_kf8sh")

[node name="Vase_a_broken" type="TextureRect" parent="."]
visible = false
offset_left = -31.0
offset_top = -31.0
offset_right = 33.0
offset_bottom = 33.0
texture = ExtResource("5_5wtpt")

[node name="Vase_b_broken" type="TextureRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("6_8o7bg")

[node name="Vase_c_broken" type="TextureRect" parent="."]
visible = false
offset_left = -31.0
offset_top = -30.0
offset_right = 33.0
offset_bottom = 34.0
texture = ExtResource("7_ubil0")

[node name="SlapVaseLabel" type="Label" parent="."]
visible = false
offset_left = -92.0
offset_top = -65.0
offset_right = 94.0
offset_bottom = -42.0
text = "Press E to slap the vase"

[connection signal="show_slappability_hint" from="." to="." method="_on_show_slappability_hint"]
